# KLogic

./: README.md
klogic4/: .cproject  .project  CMakeLists.txt
klogic4/.svn/: wc.db
klogic4/deviceIcons/: Bot.xpm  BotBlank.xpm  BotHuge.xpm  BotLarge.xpm  CMakeLists.txt  IEC_AND.xpm  Mid.xpm  MidHuge.xpm  OR.xpm  OSC.xpm  TopBlank.xpm  TopHuge.xpm  klogicf.xpm  pxDM.xpm  pxJKF.xpm  pxLED0blue.xpm  pxLED0green.xpm  pxLED0red.xpm  pxLED0yellow.xpm  pxLED1red.xpm  pxLED1yellow.xpm  pxMatrix.xpm  pxNEG.xpm  pxOUT.xpm  pxRS.xpm  pxRSC.xpm  pxRSCMF.xpm  pxSS.xpm  pxSSs0.xpm  pxSSs1.xpm  pxSSs10.xpm  pxSSs12.xpm  pxSSs14.xpm  pxSSs15.xpm  pxSSs3.xpm  pxSSs4.xpm  pxSSs5.xpm  pxSSs6.xpm  pxSSs7.xpm  pxSSsoff.xpm  (+2 more)
klogic4/examples/: cpu.circuit  jk_neg_edge.circuit  rs.circuit
klogic4/icons/: functions.xcf  gates.xcf
klogic4/po/: CMakeLists.txt  de.gmo  de.po  es.gmo  es.po  fr.po  it.gmo  sv.gmo  sv.po
klogic4/src/: FileIO.cpp  FileIO.h  KlogicGlobal.cpp  KlogicGlobal.h  Operator.h  OscChannel.cpp  OscContentWidget.h  QueueInfo.h  ScrollableCircuitWidget.h  Simulator.cpp  ValueChooser.h  calcRules.cpp  calcRules.h  calculator.cpp  calculator.h  connector.h  deviceColored.cpp  deviceColored.h  deviceFactory.cpp  deviceFactory.h  deviceInterface.h  deviceInverter.h  deviceJKFF.cpp  deviceOsc.h  deviceRAM.cpp  deviceRAM.h  deviceRSFF.h  deviceSimple.cpp  dlgLib.h  grid.cpp  imageCache.cpp  klogic.kcfg  klogic4.cpp  klogic4.h  klogic4ui.rc  klogicList.h  oldHandler.cpp  performance.h  propDev.cpp  propGlob.cpp  (+18 more)
